# cloud-course-python-package-cookiecutter

./: README.md
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.sh
{{cookiecutter.repo_name}}/.github/workflows/: build-test-publish.yaml
{{cookiecutter.repo_name}}/tests/unit_tests/: __init__.py  test__example.py
